addendum on many distinct times

--- a/posts/2017-03-01.md
+++ b/posts/2017-03-01.md
@@ -404,7 +404,7 @@ There is some prototype code! Yay! It is *pretty weird* code, not like much I've
 
 There are several things different about this chart. 
 
-1. First up, you may notice we didn't do a batch size 1 row. There are some things we do assuming there will be lots of work, and when there isn't lots of work we do it anyhow. The whole point of this work is to move to larger batches. That being said, this will probably be fixed. These same issues end up hurting the small graph more than the large graph; the small graph is sparser, and updates cause longer cascades of small updates. 
+1. First up, you may notice we didn't do a batch size 1 row. There are some things we do assuming there will be lots of work, and when there isn't lots of work we do it anyhow. The whole point of this research is to move to larger batches. That being said, this will probably be fixed. These same issues end up hurting the small graph more than the large graph; the small graph is sparser, and updates cause longer cascades of small updates. 
 
 2. We have a `10000 x 100` entry for the smaller graph! It makes sense to run the experiment now, because each update with a different time doesn't result in cancelation. Unfortunately, it is terrible. The reason here seems to be the same reason we had to do that [compaction](https://github.com/frankmcsherry/blog/blob/master/posts/2017-02-11.md) stuff: with so many updates, each of the 1,000 keys gets a sizeable history, and within a batch we are trying to process all of it without compacting it. The makes us go quadratic in the number of updates per key per batch. The good news is that we should be to do compaction on our own. The bad news is that I have to code that up.
 
@@ -451,3 +451,52 @@ I've done that now. The times have improved, generally. Old times are in parenth
 Some measurements weren't re-taken, under the premise that they shouldn't be improved (and I'm getting dodgy numbers the more my laptop runs and heats up).
 
 The small instance still suffers from the second issue above: that the implementation's behavior is quadratic in the number of times per key in each batch. For the `10000 x 100` experiment, several keys have more than 100 times, resulting in 100x overhead that could be substantially reduced. I have a partial solution for that, but it is vexxingly hard to do some things with general partial orders that are so very, very simple for integers that just increase.
+
+Even in the larger graph, we can see large numbers of times for each key. I had `group` capture a histogram of the number of distinct times each key processes in each batch, and for the `1000000 x 1` experiment (the largest batch size, admittedly, but also one we thought was getting decent performance), we get distributions of distinct times that look like:
+
+	counts[1]:	56707
+	counts[2]:	106391
+	counts[3]:	144178
+	counts[4]:	158547
+	counts[5]:	149205
+	counts[6]:	123057
+	counts[7]:	91704
+	counts[8]:	62347
+	counts[9]:	39843
+	counts[10]:	23667
+	counts[11]:	13367
+	counts[12]:	7006
+	counts[13]:	3644
+	counts[14]:	1823
+	counts[15]:	857
+	counts[16]:	347
+	counts[17]:	173
+	counts[18]:	67
+	counts[19]:	33
+	counts[20]:	19
+	counts[21]:	6
+	counts[22]:	3
+	counts[23]:	2
+	counts[24]:	1
+
+Most of the keys are doing some amount of redundant work here. Each time currently rescans the input updates and re-accumulates collections, whereas most of this work can be done just once and then updated as we move through times. That's not the whole story though, which will have to wait for the next addendum.
+
+### Addendum: Many distinct times optimizations (March 24, 2017)
+
+I have a candidate for `group` that works relatively well even with large numbers of distinct times for each key. The details will need to wait for a longer blog post, but they roughly amount to looking for totally ordered runs in the times we work with, and (future work) re-arranging the times to have longer runs. The result is an implementation that is linear (plus sorting) in the number of updates, multiplied by the number of times that are not `gt` their immediate predecessor.
+
+This works great for total orders, and is a start for partial orders. I still have some more to do with respect to re-ordering times to cut down on this number, but already there are some improvements in running times. Here are updated numbers with old execution times in parentheses (note: other optimizations have happened along the way, so this isn't just about a new algorithm).
+
+|  experiment |     1k / 2k |  1m / 10m | 1m / 10m -w2 |
+|------------:|------------:|----------:|-------------:|
+| 1 x 1000000 |           - |         - |            - |
+| 10 x 100000 | 117s (157s) | 82s (73s) |    68s (64s) |
+| 100 x 10000 |   75s (79s) | 65s (58s) |    46s (46s) |
+| 1000 x 1000 |  87s (148s) | 58s (53s) |    40s (36s) |
+| 10000 x 100 |  70s (623s) | 47s (41s) |    33s (28s) |
+| 100000 x 10 |        131s | 34s (31s) |    21s (20s) |
+| 1000000 x 1 |        385s | 26s (25s) |    19s (15s) |
+
+As you can see, several numbers for the smaller graph got much better, and at the same time the numbers for the larger graph got a bit worse. This makes sense, as the code is certainly more sophisticated than before, and if the problem didn't exist (e.g. the larger graph) we are just paying a cost. That being said, I bet we can recover these losses and more when we actually try and optimize the implementations; if nothing else, we can just drop in to the simpler implementation for small numbers of times and save the complex one for large number of times.
+
+Also in the measurements, the times for the small graph are not strictly improving as we increase the batch size. This is probably a result of not really nailing the smallest number of totally ordered chains yet, though I can't really confirm that yet. There are some other reasons that arbitrarily large batches aren't perfect for iterative algorithms (in each iteration we must at least pick up previous updates, making each iteration take time linear in the sum of batch sizes of prior iterations, rather than just their own size).
