updated with better sorting

--- a/posts/2017-03-01.md
+++ b/posts/2017-03-01.md
@@ -500,3 +500,29 @@ This works great for total orders, and is a start for partial orders. I still ha
 As you can see, several numbers for the smaller graph got much better, and at the same time the numbers for the larger graph got a bit worse. This makes sense, as the code is certainly more sophisticated than before, and if the problem didn't exist (e.g. the larger graph) we are just paying a cost. That being said, I bet we can recover these losses and more when we actually try and optimize the implementations; if nothing else, we can just drop in to the simpler implementation for small numbers of times and save the complex one for large number of times.
 
 Also in the measurements, the times for the small graph are not strictly improving as we increase the batch size. This is probably a result of not really nailing the smallest number of totally ordered chains yet, though I can't really confirm that yet. There are some other reasons that arbitrarily large batches aren't perfect for iterative algorithms (in each iteration we must at least pick up previous updates, making each iteration take time linear in the sum of batch sizes of prior iterations, rather than just their own size).
+
+### Addendum: Fixing some deranged allocation (March 26, 2017) 
+
+You might notice in the numbers above a disappointing spike up to `87s` for the small graph in the `1000 x 1000` configuration. It turns out this is because one thousand updates, which turns into two thousand changes (one edge in, one edge out), is just over the threshold we used for "should we radix sort or not?". This means that for these settings, we end up allocating some 256 buffers and working with them a fair bit. And then we drop them on the floor so that we can re-allocate them the next time around. Not very bright.
+
+In fact, it was much sillier than that. The sorting happens as part of separating an undifferentiated pile of updates into "sealed" updates, those whose times have passed and we are not ready to finalize, and updates that stay in the pile. We were doing the "should we radix sort" based on the undifferentiated number, rather than the number we would eventually have to sort (those of finished times). Because of how partially ordered times work, and that timely dataflow can only carry one capability at a time, we end up slicing these batches even more finely when the frontier advances, so that we have several small sealed sets. Each of them have the bad radix sorting allocate-and-drop behavior.
+
+So that should be fixed. I even pushed a new version of `timely_sort` (some radix sorting code) that does less allocation. I'm not quite using it yet, but even with the local fixes, numbers look better:
+
+|  experiment |     1k / 2k |  1m / 10m | 1m / 10m -w2 |
+|------------:|------------:|----------:|-------------:|
+| 1 x 1000000 |           - |         - |            - |
+| 10 x 100000 |      (117s) |     (82s) |        (68s) |
+| 100 x 10000 |       (75s) |     (65s) |        (46s) |
+| 1000 x 1000 |   63s (87s) | 54s (58s) |    36s (40s) |
+| 10000 x 100 |   61s (70s) | 43s (47s) |    28s (33s) |
+| 100000 x 10 | 127s (131s) | 31s (34s) |    20s (21s) |
+| 1000000 x 1 |      (385s) | 23s (26s) |    16s (19s) |
+
+The configurations with batches smaller than one thousand really shouldn't see much change, and the much larger batches should have *much* change (some small batches emerge in the computation for larger batches). There is some serious improvement for the small graph, and decent improvement for the large graph. We are mostly regaining ground on the larger graph, having taken a hit from the complexity of the new and complicated "linear-ish" algorithm.
+
+What these numbers should tell you, though, is that all this code is new enough that we are getting 10% improvements just by looking at it and removing the stupid. I'm planning on doing a bit more of that next. For example, each time we radix sort one thousand elements, we compute the hash of each eight times. Why would we do that?
+
+One appealing aspect of Rust (over managed languages) is that there is no reason we shouldn't be able to write the code that does what we think it should do, and in this case we kinda think we should be able to sort some updates by key, zip them along stashed state, and compute and ship output differences. Any thing that takes time is either because (i) we aren't actually doing that yet, or (ii) we are doing it badly. Each of these should be fixable.
+
+One problem is that I don't actually know how fast we *should* be able to compute one million related bfs computations. Should we hope to get the `1k/2k` number down to one second? Why not? That seems like a good goal to aim for. Or at least, we should understand what are the large number of fundamental computations that prevent us from that goal.
