updated with better sorting

--- a/posts/2017-03-01.md
+++ b/posts/2017-03-01.md
@@ -519,7 +519,7 @@ So that should be fixed. I even pushed a new version of `timely_sort` (some radi
 | 100000 x 10 | 127s (131s) | 31s (34s) |    20s (21s) |
 | 1000000 x 1 |      (385s) | 23s (26s) |    16s (19s) |
 
-The configurations with batches smaller than one thousand really shouldn't see much change, and the much larger batches should have *much* change (some small batches emerge in the computation for larger batches). There is some serious improvement for the small graph, and decent improvement for the large graph. We are mostly regaining ground on the larger graph, having taken a hit from the complexity of the new and complicated "linear-ish" algorithm.
+The configurations with batches smaller than one thousand really shouldn't see much change, and the much larger batches shouldn't have *much* change (some small batches emerge in the computation for larger batches). There is some serious improvement for the small graph, and decent improvement for the large graph. We are mostly regaining ground on the larger graph, having taken a hit from the complexity of the new and complicated "linear-ish" algorithm.
 
 What these numbers should tell you, though, is that all this code is new enough that we are getting 10% improvements just by looking at it and removing the stupid. I'm planning on doing a bit more of that next. For example, each time we radix sort one thousand elements, we compute the hash of each eight times. Why would we do that?
 
