--- a/posts/2017-03-28.md
+++ b/posts/2017-03-28.md
@@ -36,7 +36,7 @@ These latencies largely stabilize. The code is performing compaction on the hist
 
 Differential dataflow computations are data-parallel, and can take advantage of multiple workers to increase the rate at which they perform work. However, to achieve this scaling the workers must have enough work that can be performed concurrently. If we only supply single updates at a time, there is not usually enough work to interest more than one worker, and often additional workers simply slow down the computation. To increase the throughput of the computation, at the time of the post, one would need to batch updates together at the same logical time.
 
-[batching](https://github.com/frankmcsherry/blog/blob/master/assets/roadmap/batching.png)
+![batching](https://github.com/frankmcsherry/blog/blob/master/assets/roadmap/batching.png)
 
 Batching updates at the same logical time improves performance, but it changes the semantics of the computation: we get a different set of output updates than if the input updates had occurred at distinct times. We no longer get to see the precise impact of each input update, which may be crucially important for some computations. At the least, we would like you to be able to write such a computation if you need, and to get scaling benefits from multiple workers.
 
