--- a/posts/2017-03-28.md
+++ b/posts/2017-03-28.md
@@ -36,11 +36,13 @@ These latencies largely stabilize. The code is performing compaction on the hist
 
 Differential dataflow computations are data-parallel, and can take advantage of multiple workers to increase the rate at which they perform work. However, to achieve this scaling the workers must have enough work that can be performed concurrently. If we only supply single updates at a time, there is not usually enough work to interest more than one worker, and often additional workers simply slow down the computation. To increase the throughput of the computation, at the time of the post, one would need to batch updates together at the same logical time.
 
+This figure shows latency distributions for single worker (solid line) and two worker (dashed line) for different batch sizes. The additional worker is counter-productive for small batches, and helpful only for larger batches.
+
 ![batching](https://github.com/frankmcsherry/blog/blob/master/assets/roadmap/batching.png)
 
 Batching updates at the same logical time improves performance, but it changes the semantics of the computation: we get a different set of output updates than if the input updates had occurred at distinct times. We no longer get to see the precise impact of each input update, which may be crucially important for some computations. At the least, we would like you to be able to write such a computation if you need, and to get scaling benefits from multiple workers.
 
-The problem hese was that the evaluation methodology was "measure either latency or throughput, as appropriate" ignoring the fact that as we change the batch size we are changing the computation. We did not actually have a latency-throughput trade-off for a fixed computation.
+The problem here was that the evaluation methodology was "measure either latency or throughput, as appropriate" ignoring the fact that as we change the batch size we are changing the computation. We did not actually have a latency-throughput trade-off for a *fixed* computation.
 
 The solution is again to change what we measure to make sure that we cannot (even unintentionally, I swear) cheat in this way. To evaluate any claimed latency-throughput trade-offs, we must be able to produce the same outputs in each configuration. We put forward the following goal:
 
@@ -48,7 +50,7 @@ The solution is again to change what we measure to make sure that we cannot (eve
 
 I think this goal might be a bit over-zealous, in that we don't simply want to maximize the throughput but rather present a latency-throughput trade-off. But, we should only present that trade-off while holding the computation fixed, and any claims of high throughput or scaling with workers should not involve a change to the computation to expose more concurrency.
 
-Let's take a look at the current state of affairs. For our trusty 1,000 node 2,000 edge graph, we can now trade off latency against throughput by altering the sizes of batches we expose to timely dataflow, which allows the differential dataflow operators to work on larger chunks of data. This amortizes out some system overhead, and also allows each operator to re-organize its work to improve efficiency.
+Let's take a look at the current state of affairs. We can now trade off latency against throughput by altering the sizes of batches we expose to timely dataflow, without altering the logical times associated with updates. This amortizes out some system overhead, and also allows each operator to re-organize its work to improve efficiency.
 
 Here are the most recent round of numbers for the small and large graphs, elapsed times to process one million updates in various batch sizes.
 
@@ -74,9 +76,9 @@ To read these numbers differently, we can report each line as a (latency, throug
 | 100000 x 10 |   12.7s, 7.874k/s |  3.1s, 32.258k/s |
 | 1000000 x 1 |    385s, 2.597k/s |   23s, 43.478k/s |
 
-I left out the multiple worker data because it was already badly enough formatted.
+I left out the multiple worker data because it was already badly enough formatted. Please help me.
 
-You can see from the numbers that (i) not all is yet perfect with the small graph (there is some lingering non-linearity in `group`, I think), but that otherwise (and especially for the large graph) there is a clear trade-off between latency and throughput. The more we are willing to wait, the higher throughput we can accommodate. For a given workload with a given throughput, the latency should stabilize somewhere and correct itself if the load climbs or dips (unless we are working on the small graph, in which case everything just melts; computers are hard).
+You can see from the numbers that not all is yet perfect with the small graph (there is some lingering non-linearity in `group`, I think), but that otherwise (and especially for the large graph) there is a clear trade-off between latency and throughput. The more we are willing to wait, the higher throughput we can accommodate. For a given workload with a given throughput, the latency should stabilize somewhere and correct itself if the load climbs or dips (unless we are working on the small graph, in which case everything just melts; computers are hard).
 
 I should also stress that these absolute numbers probably suck. We are going to work on improving them in the coming roadmap steps, but at least we are looking at the right measurements now, rather than citing the latency of single-element updates and the throughput of large batches of updates with one timestamp.
 
@@ -128,12 +130,16 @@ Also we can cheat. Watch me.
 
 ### Problem 2: Memory footprint
 
-The new data structures for representing compactable high-resolution times are not nearly as tight as the collections that do not support these features. Mostly, the new data structures have `Time: Lattice` fields scattered throughout them, and compared with the `u32` sorts of values we often see in graph computation, the `(usize, usize)` pairs we often see in iterative graph computation are really quite large.
+The new data structures for representing compactable high-resolution times are not nearly as tight as the collections that do not support these features. Mostly, the new data structures have `Time: Lattice` fields scattered throughout them, and compared with the `u32` sorts of node values we often see in graph computation, the `(usize, usize)` timestamp pairs we often see in iterative graph computation are really quite large.
 
 This space requirement doesn't seem to be fundamental to every collection, and we could hope to avoid it for large classes of computations. Yes if everything about the graph changes at every moment, we will need to have that all written down. On the other hand, for large datasets it is much more common that relatively little changes at a time, with the rest of the collection just "committed" rather than differentiated by time. As time advances, all of the changes get folded in to the large committed collection and we can mostly discard their times, rather than keep them around.
 
 **Challenge** For the `twitter_rv` graph, with 42 million nodes and 1.4 billion edges, perform breadth-first search with 1.4 billion (or however many edges it has) single-element updates updates, on my laptop with 16GB of memory.
 
-The 1.4 billion edges should fit in 6GB of memory, if we didn't have to worry about them changing so much. Also if they just magically appeared in pre-allocated memory, rather than started as undifferentiated `(src, dst)` pairs. Also if we can manage to avoid accidentally sending 1.4 billion messages about graph distances all at once. There are lots of ways to screw this up, and I'm familiar with several of them (I won't say "all", but I'll wager "most"). Each of them has a story to tell about how to make differential dataflow (and similar systems) not fall over in a different way.
+The 1.4 billion edges should fit in 6GB of memory, if we didn't have to worry about them changing so much. Also if they just magically appeared in pre-allocated memory, rather than started as undifferentiated `((src, dst), 0, +1)` pairs. Also if we can manage to avoid accidentally sending 1.4 billion messages about graph distances all at once from our `join` operator. And if the `group` operator consumes and compacts them in-place. There are lots of ways to screw this up, and I'm familiar with several of them (I won't say "all", but I'll wager "most"). Each of them has a story to tell about how to make differential dataflow (and similar systems) not fall over in some different and thought-provoking way.
 
 Nonetheless, this is a totally excellent challenge that should test whether our trait abstractions in place of collections are tasteful enough that we can put some clever representations behind them, without having to open up the kimono.
+
+### Next steps: COST
+
+I'm optimistic that I'll be able to write a pretty slick single-threaded bfs implementation, and that it will perform well enough that my smugness about its performance will mask the otherwise inescapable chasm between it and how differential dataflow currently performs. I'm also optimistic that we'll be able to walk through at least four or five details about the implementation and connect them back to things that differential dataflow *could* be doing, with enough care. And then we'll start looking at how to do each of them.
