--- a/posts/2017-03-01.md
+++ b/posts/2017-03-01.md
@@ -526,3 +526,53 @@ What these numbers should tell you, though, is that all this code is new enough 
 One appealing aspect of Rust (over managed languages) is that there is no reason we shouldn't be able to write the code that does what we think it should do, and in this case we kinda think we should be able to sort some updates by key, zip them along stashed state, and compute and ship output differences. Any thing that takes time is either because (i) we aren't actually doing that yet, or (ii) we are doing it badly. Each of these should be fixable.
 
 One problem is that I don't actually know how fast we *should* be able to compute one million related bfs computations. Should we hope to get the `1k/2k` number down to one second? Why not? That seems like a good goal to aim for. Or at least, we should understand what are the large number of fundamental computations that prevent us from that goal.
+
+### Addendum: Quadratic behavior in `join` (March 31, 2017)
+
+I found the source of the bad behavior for the small graph!
+
+When shifting from "each batch contains one time" to "batches may contain multiple times" I was pleased to find that the `join` logic still passed its tests and didn't seem to need any fixing. Wow was that wrong.
+
+First, it turns out that `join` as written wasn't even correct. It passed all the tests because `bfs` (which I used as the "integration" test) never has both of its join inputs vary at the same time. Sure the `edges` change and the `dists` change, but it is always either one (new round of edge data) or the other (new iteration). So I fixed that (the bug, not the test).
+
+More interestingly, I think, it became patently clear that the implementation would quite happily go quadratic even on joins where there was *no* output. Let me explain how join used to work:
+
+When joining two sources of data, we get sequences of batches of updates, each of which looks kind of like a `Vec<(K, V, T, R)>` (where you should think of `R` as `isize`). For each batch we receive, we want to join it with all batches received so far on the *other* input. This is a fairly traditional streaming equijoin. So we join one `batch` with the `trace` of all history for the other input (probably compacted a bit; that isn't the issue) on the other side:
+
+```rust
+for key in batch.keys() {
+	for &(val1, time1, diff1) in &batch[key] {
+		for &(val2, time2, diff2) in &trace[key] {
+			output.ship(((val1, val2), time1.join(&time2), diff1 * diff2));
+		}
+	}
+}
+```
+
+Amazingly, due to bi-lineary of `join` and the way differential dataflow difference work, this is actually correct. Even more clearly, this will do an amount of work proportional to the product of the sizes of `batch` and `trace`. That makes some sense, because we probably expect to see an output for each pair of values in `batch` and `trace`, right?
+
+WRONG! 
+
+This is where I started to think that maybe I should read about temporal databases or something, rather than "discovering" all this stuff myself. Over the course of the history of `batch` and `trace`, the collections may never grow to be all that big. In fact, they could totally alternate empty / non-empty out of sync, in which case there would be no matches. All we would need to do to see this would be to play each history in order, which takes time linear in the inputs.
+
+So I wrote a better inner loop for join when the histories are big and scary (and fall back to the default implementation when they are not). The idea is roughly to walk through the histories in order, maintaining each collection's updates accumulated with respect to the remaining frontier of times for the other collection (for total orders, read this as: "updated in place").
+
+Returning to our trusty `bfs` experiment, we get new numbers that look like (old numbers in parentheses):
+
+|  experiment |     1k / 2k |  1m / 10m | 1m / 10m -w2 |
+|------------:|------------:|----------:|-------------:|
+| 1 x 1000000 |           - |         - |            - |
+| 10 x 100000 |      (117s) |     (82s) |        (68s) |
+| 100 x 10000 |       (75s) |     (65s) |        (46s) |
+| 1000 x 1000 |   62s (63s) | 56s (54s) |    38s (36s) |
+| 10000 x 100 |   59s (61s) | 47s (43s) |    32s (28s) |
+| 100000 x 10 |  69s (127s) | 36s (31s) |    23s (20s) |
+| 1000000 x 1 |  73s (385s) | 32s (23s) |    21s (16s) |
+
+This is, much like a post or two back, a serious improvement for the small graph, and a non-trivial regression for the larger graph. 
+
+I'm not entirely sure what is wrong with the larger graph, in that the join implementation is largely the same for uncomplicated histories, except that it must first extract the history to check if it is complicated; the old implementation didn't have to copy data out from `batch` and `trace` to look at it, which is perhaps the issue? I feel like we can eventually work around that, especially given that batch exfiltration of data should be faster than the careful navigation we were (and still are, unfortunately) doing to read the data.
+
+Looking at a profile, the large graph `1000000 x 1` experiment spends only 6% of its time in `join` at all, so the serious regression seems unlikely to live there. I don't think I've changed `group` in the meantime, so I'm not exactly sure what is screwed up; perhaps I tweaked the measurement program inappropriately, or perhaps I caught a dodgy measurement the previous time around (when there was, in fairness, a buggy join implementation).
+
+For the small graph, the bulk of the time is now spent in `group`, in some operations that may still have some defective performance (sorting mostly, it seems; technically super-linear). It would be great to get performance to improve with increasing batch size before starting to optimize the implementations.
