--- a/posts/2017-03-01.md
+++ b/posts/2017-03-01.md
@@ -576,3 +576,77 @@ I'm not entirely sure what is wrong with the larger graph, in that the join impl
 Looking at a profile, the large graph `1000000 x 1` experiment spends only 6% of its time in `join` at all, so the serious regression seems unlikely to live there. I don't think I've changed `group` in the meantime, so I'm not exactly sure what is screwed up; perhaps I tweaked the measurement program inappropriately, or perhaps I caught a dodgy measurement the previous time around (when there was, in fairness, a buggy join implementation).
 
 For the small graph, the bulk of the time is now spent in `group`, in some operations that may still have some defective performance (sorting mostly, it seems; technically super-linear). It would be great to get performance to improve with increasing batch size before starting to optimize the implementations.
+
+### Addendum: Simplifying "interesting times" (March 31, 2017)
+
+One complicated bit of logic in `group` determines the logical times at which we may need to re-evaluate user logic. It is not so much complicated, as much as I made it complicated. The logic is meant to take two sets of times, `old` and `new` let's say, and determine the times that are the lattice join of a subset of `old` and a non-empty subset of `new`.
+
+For example, here is the reference implementation that I wrote (here `edits` is the old set and `times` is the new set):
+
+```rust
+// REFERENCE IMPLEMENTATION (LESS CLEVER)
+let times_len = times.len();
+for position in 0 .. times_len {
+    for &(_, ref time, _) in edits {
+        if !time.le(&times[position]) {
+            let join = time.join(&times[position]);
+            times.push(join);
+        }
+    }
+}
+
+let mut position = 0;
+while position < times.len() {
+    for index in 0 .. position {
+        if !times[index].le(&times[position]) {
+            let join = times[index].join(&times[position]);
+            times.push(join);
+        }
+    }
+    position += 1;
+    times[position..].sort();
+    times.dedup();
+}
+```
+
+It does a bunch of work, much more than the possibly linear-time implementation I worked hard on. Of course, it is so much simpler (by about 80 lines, and many loops), and we should probably just use it when we don't have lots of edits. Because often we don't have lots of edits.
+
+|  experiment |     1k / 2k |  1m / 10m | 1m / 10m -w2 |
+|------------:|------------:|----------:|-------------:|
+| 1 x 1000000 |           - |         - |            - |
+| 10 x 100000 |      (117s) |     (82s) |        (68s) |
+| 100 x 10000 |       (75s) |     (65s) |        (46s) |
+| 1000 x 1000 |   58s (62s) | 55s (56s) |    38s (38s) |
+| 10000 x 100 |   56s (59s) | 46s (47s) |    30s (32s) |
+| 100000 x 10 |   67s (69s) | 35s (36s) |    23s (23s) |
+| 1000000 x 1 |   74s (73s) | 31s (32s) |    23s (21s) |
+
+These are pretty minor effects, with some light improvement in the smaller batch sizes where we expect less complicated histories. I was initially really excited about this because I conflated the improvements with the next optimization, but once I broke them apart this was not the better part. Sorry!
+
+### Addendum: Avoiding expensive hashing (March 31, 2017)
+
+What actually makes a difference is ripping out a fair amount of redundant hashing. Our default storage uses hash tables to index data by key, which is really helpful when we have relatively few keys in each batch. At the same time, our default implementation just calls each types associated hash function when it needs a hash, which can be quite a lot.
+
+In particular, when we first arrange data into batches we sort it (by key, then value, then time), and while this is primarily a radix sort using the hash, we need to finish it with a standard Rust sort to deal with possible hash collisions and to get values and times ordered too. If we have lots of data, and especially if we have lots of equivalent keys, this ends up calling the hash function on the key quite a lot.
+
+There is a small change we can make to cache the hash value; doing that doesn't seem to help all that much; it probably makes sorting faster but then costs later on when we need to move around keys and hash values together. This is worth looking into more, because if you show up with long `String` keys you aren't going to want lots of hash re-evaluation.
+
+A simple change, for the purposes of graphs, is to use random node identifiers and have each identifier be its own hash value. This works out great, and we get generally improved performance:
+
+|  experiment |     1k / 2k |  1m / 10m | 1m / 10m -w2 |
+|------------:|------------:|----------:|-------------:|
+| 1 x 1000000 |           - |         - |            - |
+| 10 x 100000 |      (117s) |     (82s) |        (68s) |
+| 100 x 10000 |       (75s) |     (65s) |        (46s) |
+| 1000 x 1000 |   51s (58s) | 51s (55s) |    31s (38s) |
+| 10000 x 100 |   51s (56s) | 38s (46s) |    25s (30s) |
+| 100000 x 10 |   60s (67s) | 28s (35s) |    19s (23s) |
+| 1000000 x 1 |   66s (74s) | 24s (31s) |    17s (23s) |
+
+This recovers a fair chunk of time we lost previously, and this difference could actually be the source of the apparent regression (perhaps I was using this version before; I certainly have in the past).
+
+One question this raises is whether we really need hash tables as the index structure. They are helpful for sparse access, but if our plan is to push hard on throughput, perhaps simple ordered lists are good enough. They are much simpler to construct, and very cheap to merge. They would likely kill the numbers for small batch sizes, effectively raising the "minimum latency" you would experience for small loads. This will also be fun to check out, though. 
+
+Plus we are actually going to put real indices in place at some point, which should make the distinction less important.
+
+We still have an up-tick for increasing batch sizes in the small graph, and I still want to sort that out. Removing all this hashing is one way of getting rid of the noise that is leaving the source of the problem a mystery.
