--- a/posts/2015-01-15.md
+++ b/posts/2015-01-15.md
@@ -80,7 +80,7 @@ fn pagerank<G: EdgeMapper>(graph: &G, nodes: u32, alpha: f32) {
 }
 ```
 
-I'm not going to say very much about whether this is a good pagerank implementation. There are [better versions](http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.59.5449), but everyone uses this algorithm for benchmarking
+I'm not going to say very much about whether this is a good pagerank implementation. There are [better versions](https://www.microsoft.com/en-us/research/publication/a-uniform-approach-to-accelerated-pagerank-computation/), but everyone uses this algorithm for benchmarking
 to ensure they are measuring their system's performance, not the algorithm's. This is textbook PageRank, no bells, no whistles.
 
 Label propagation is basically just as simple. For those of you unfamiliar with the algorithm, each node maintains a label, and repeatedly improves it by asking their neighbors if they have a smaller label. This is run until convergence, at which point all nodes in the same component have the same label.
