--- a/posts/2017-04-24.md
+++ b/posts/2017-04-24.md
@@ -35,7 +35,7 @@ Having chatted with the hot dog authors, their benchmark loads up the data to pr
 
 The TPCH queries are "analytical", meaning I guess that they are relatively large aggregates over the whole datasets, rather than look-ups of individual entries. By design, they have different characteristics and actually do seem to do a good job exercising various systems dark corners. Also, I think, by design: the data schema and queries are all tractable: there are no weird motif-finding queries, iterative graph processing, or exciting things like this. All of the queries can be maintained with work linear in the number of updates (though this may be non-obvious on first reading of the queries).
 
-#### Query 01
+#### [Query 01](https://github.com/frankmcsherry/differential-dataflow/blob/master/tpchlike/src/queries/query01.rs)
 
 Let's start at the beginning! A very good place to start.
 
@@ -154,9 +154,9 @@ This isn't to say that differential dataflow is justified in doing these things.
 
 This does raise the question of whether people really want to see streams of counts. Obviously this is a natural output for a database query, but if you are monitoring a stream of aggregate quantities, you may or may not actually want to see the counts themselves. It is pretty easy for your UI to accumulate the changes as they arrive, and arguably the decision to turn a stream of updates into a stream of count changes (where the counts are data) is something the consumer of the stream should make. If we skip the `count()` and just hand back differences for you to accumulate, the times drop to somewhere between one quarter and one half of a second, for reference.
 
-#### Query 06
+#### [Query 06](https://github.com/frankmcsherry/differential-dataflow/blob/master/tpchlike/src/queries/query06.rs)
 
-If you thought query 1 was easy, query 6 is meant to be *really* easy. At least, I think that is the intent. It 
+If you thought query 1 was easy, query 6 is meant to be *really* easy. At least, I think that is the intent. It looks like:
 
     select
         sum(l_extendedprice * l_discount) as revenue
@@ -198,7 +198,7 @@ This query seems to exercise just how light a touch you can have on the data. Ju
 
 The first version of this code did several things differently, each of which had performance issues. Notice that at 36M/s we have about a 30ns budget for each record.
 
-1. Initially the data were not pre-batched, and the batches were discovered as we walked through the data. This added a substantial amount of per-record overhead. Worse, each time around the "what should we do next" loop we checked out each of the eight relations, all to produce just one `lineitem` record. Horrible. We pre-batched things.
+1. Initially the data were not pre-batched, and the batches were discovered as we walked through the data. This added a substantial amount of per-record overhead. Worse, each time around the "what should we do next" loop we checked out each of the eight relations, all to produce just one `lineitem` record. Horrible. We have since pre-batched things.
 
 2. Timely dataflow's input operator [only recently](https://github.com/frankmcsherry/timely-dataflow/commit/f86573d264320324c3116cdb0640c79fa6b6a06f) got the ability to accept batches of input, rather than records at a time. I think that previously I was amazed that record-at-a-time ingestion got inlined and turned into a `memcpy`, but .. now we can just accept the batches.
 
@@ -208,7 +208,7 @@ The first version of this code did several things differently, each of which had
 
 If you attach a profiler to the current program, roughly half of the remaining time (about 80ms) is now spent de-allocating buffers of `LineItem` entries, the roughly 1GB of input data that we retire in the `flat_map`, in chunks of whatever our batch size is. I don't know enough to know if this is surprisingly large, or otherwise avoidable. In a "real" system we would almost certainly want to recycle these buffers rather than drop them, but since all of our input are pre-prepared, we don't have anything to do with recycled buffers. If we went columnar, we could avoid even having the other fields around in the first place, but that feels a bit like cheating (or smarts, hard to tell the difference some times).
 
-#### Query 04
+#### [Query 04](https://github.com/frankmcsherry/differential-dataflow/blob/master/tpchlike/src/queries/query04.rs)
 
 Query 4 does a few things, but from our point of view it (i) filters about half of the `lineitems` away, and then (ii) calls `distinct` on the remaining `order_key` fields in evidence. Roughly, we need to filter down orders by those with a line item entry violating a delivery commitment; about half of the line item records violate their delivery commitment, so perhaps we shouldn't try too hard to emulate this particular firm.
 
@@ -263,7 +263,13 @@ where R: Mul<R2>, <R as Mul<R2>>::Output: Diff {
 }
 ```
 
-All we need to do is stitch these together by hand, removing the `as_collection()` call from `distinct` and the `arrange_by_self()` call from `semijoin`. And add a bunch of `use` statements for all the traits that aren't normally exposed. Operators that can act on streams of pre-arranged data look something like a cheap-o version of operator fusion: while in principle we could in-line the `distinct` and `semijoin` code (as it works by the same key), this does something fairly similar and allows us more flexibility (or more free time for not writing the code analysis stuff).
+All we need to do is stitch these together by hand, removing the `as_collection()` call from `distinct` and the `arrange_by_self()` call from `semijoin`. And add a bunch of `use` statements for all the traits that aren't normally exposed. 
+
+---
+
+**Fun fact:** Operators that can act on streams of pre-arranged data look something like a cheap-o version of operator fusion: while in principle we could in-line the `distinct` and `semijoin` code (as it works by the same key), this does something fairly similar and allows us more flexibility (or more free time for not writing the code analysis stuff).
+
+---
 
 When we do this, we see
 
@@ -276,7 +282,7 @@ This is better, but not mind-blowingly better. Part of the reason, I think, is t
 
 We will see another opportunity to apply this optimization to a more churn-y `group` operator in a later query! Maybe it will work out better there.
 
-#### Query 18 
+#### [Query 18](https://github.com/frankmcsherry/differential-dataflow/blob/master/tpchlike/src/queries/query18.rs)
 
 Query 18 takes all of our trusty line items, and asks "how many orders have at least 300 units of quantity in them?". This hits `lineitems` with a `count` and then uses the results in a `join` to restrict our attention to such orders. The counts change a lot more often than the distinct order keys from up in query 4, and should be a much better example of fusing the output of `count` with the input to `semijoin`. Let's look at the code:
 
@@ -304,16 +310,18 @@ Let's try it both ways and see how we do.
 
 This is definitely an improvement, and is interesting because it runs a little counter to the traditional wisdom that you should push filters as early as possible. Of course, we could wish to push the filter up, but we would need to find a way to re-use the existing index and stream of batches, which we should be able to do with a bit of friendly wrapping. There is an [issue](https://github.com/frankmcsherry/differential-dataflow/issues/36) on the differential dataflow repo to start to think about exactly this sort of thing (generalized; it also helps with time stamp manipulation, and might help with some instances of `map`).
 
-#### Query 15
+#### [Query 15](https://github.com/frankmcsherry/differential-dataflow/blob/master/tpchlike/src/queries/query15.rs)
 
 This is the query that the [dbtoaster.org](http://www.dbtoaster.org/index.php?page=home&subpage=performance) folks performed the worst on, so I thought this would be good exercise. It is indeed a pretty non-standard query, or it certainly is expressed in a non-standard way. The query intent is pretty simple: report the suppliers with the largest revenue. This is awkwardly expressed as a selection where there is a nested query for the maximum sum of revenue, and the requirement that the revenue for the selected rows equal this maximum.
 
 I find this a lot simpler in differential dataflow: from `lineitems` we define a collection whose elements are `supplier_key` with weight equal to their revenue. We then do a group that produces the elements with the largest revenue:
 
+```rust
 revenue.group(|_k, s, t| {
     let max = s.iter().map(|x| x.1).max();
-    t.extend(s.iter().take_while(|x| x.1 == max);
+    t.extend(s.iter().filter(|x| x.1 == max);
 })
+```
 
 How does it work? Given that we are re-forming the input to the `group` with every update, it works surprisingly well.
 
@@ -332,7 +340,7 @@ revenue
     .map(|supp| (supp % 100, supp))
     .group(|_k, s, t| {
         let max = s.iter().map(|x| x.1).max();
-        t.extend(s.iter().take_while(|x| x.1 == max)
+        t.extend(s.iter().filter(|x| x.1 == max)
     })
     .map(|(_, supp)| ((), supp))
     .group(|_k, s, t| {
@@ -395,7 +403,7 @@ This is *waaaaay* more subtle than it looks, because when you look at the input 
 
 Better still, the underlying shared collection traces are organized by the same ordering on values, so you could make the cursor be *very lazy* and not even load data you don't ask for. This is very appealing for several reasons, not least of which that about half of the time in `group` is spent merging data from the underlying mergeable lists. It is also subtle and complicated, because the moment a new value goes live (when your code first looks at it) we may be halfway through a computation with some supposed invariants about the logical times we are examining. It should all work out, but again, worth doing correctly. Watch this space.
 
-#### Query 11
+#### [Query 11](https://github.com/frankmcsherry/differential-dataflow/blob/master/tpchlike/src/queries/query11.rs)
 
 This is another neat query, in the spirit of query 15. Rather than extract the suppliers with maximum revenue, the query asks for those parts whose total value (cost times quantity) is some non-trivial fraction of the total value (for suppliers in some given nation). 
 
@@ -419,7 +427,7 @@ Of course none of this works today. Instead, we recompute all over the place lik
 
 This should probably be up in the millions per second, and will be once I get off my duff and implement the cursor-based `group` and `cogroup` operators. The main reason it might not is if there in fact lots of records that are "significant fractions" of the total, in which case we'll have to look at all of them.
 
-#### Query 22
+#### [Query 22](https://github.com/frankmcsherry/differential-dataflow/blob/master/tpchlike/src/queries/query22.rs)
 
 Query 22 is a bit like queries 15 and 11: it asks for a subset of the customers that have an above-average account balance. Unfortunately, there are probably lots of customers with an above-average account balance, and we shouldn't expect to look at just a few records only because we sorted the data. Even more unfortunately, the average isn't over the same set of customers: we want customers with a specific property (no orders present) with balance above the average of all customers; we would probably be in trouble if we just formed up all customers and worked with that set.
 
