fix typos in the TPC-H post.

--- a/posts/2017-04-24.md
+++ b/posts/2017-04-24.md
@@ -21,7 +21,7 @@ There are eight relations, with numbers of tuples:
     nations          25
     regions           5
 
-The mostly seem to have random data, generated according to some rules, but we are going to try to avoid exploiting any properties like that. The only thing I've done, initially subconsciously but now more formally, is notice how large each relation is. This is probably safe.
+They mostly seem to have random data, generated according to some rules, but we are going to try to avoid exploiting any properties like that. The only thing I've done, initially subconsciously but now more formally, is notice how large each relation is. This is probably safe.
 
 The streaming setting we are emulating is the one put forward in the paper [How to Win a Hot Dog Eating Contest](https://github.com/frankmcsherry/differential-dataflow/tree/master/tpchlike), a recent publication on batch sizing in incremental view maintenance from the [dbtoaster.org](http://www.dbtoaster.org) group at EPFL. The idea is to evaluate the "loading" of the relations, by alternating through the relations adding one record each and updating each of the TPCH queries. This loads small relations like `nations` and `regions` pretty quickly, which is good because they are probably mostly static anyhow (and the computations would be weird/defective if "EUROPE" only showed up at the end).
 
@@ -63,11 +63,11 @@ Actually, this might be the *worst* query in the bunch, because its relative sim
         l_returnflag,
         l_linestatus;
 
-I can't really read SQL all that well, so it is to my great delight that each query also has an English language description of the intent. 
+I can't really read SQL all that well, so it is to my great delight that each query also has an English language description of the intent.
 
 > The Pricing Summary Report Query provides a summary pricing report for all lineitems shipped as of a given date. The date is within 60 - 120 days of the greatest ship date contained in the database. The query lists totals for extended price, discounted extended price, discounted extended price plus tax, average quantity, average extended price, and average discount. These aggregates are grouped by RETURNFLAG and LINESTATUS, and listed in ascending order of RETURNFLAG and LINESTATUS. A count of the number of lineitems in each group is included.
 
-This query is actually pretty readable I feel, but we get the message pretty clearly: add a bunch of things up, but not everything (because of some date constraint) and do the adding independently for a different settions of return flags and statuses.
+This query is actually pretty readable I feel, but we get the message pretty clearly: add a bunch of things up, but not everything (because of some date constraint) and do the adding independently for different settings of return flags and statuses.
 
 Let's imagine we just wanted to do a `count`, because that is pretty easy and plus differential dataflow has a `count` operator. How would we write this in differential dataflow? There is [actual code written](https://github.com/frankmcsherry/differential-dataflow/blob/master/tpchlike/src/queries/query01.rs), but stylized you might write
 
@@ -83,7 +83,7 @@ This works great. I mean, great-ish; we will see some performance shortcomings i
 
 Until about a month ago, if you wanted to compute the sum of a thing other than the number of records, you had to cheat a bit. You had to create a new collection whose counts were the thing you wanted to sum. For example, if we wanted to sum `quantity` (which we do) we would need to transform the `lineitems` relation into one where each record has weight equal to its quantity, rather than "one". The resulting collection is much "larger", but this is no big deal because we just track all the counts as `isize` fields anyhow. A `count()` will now determine the accumulated quantity across all the records. We would have to repeat this for each aggregation we want to take.
 
-About a month ago [support for general aggretable types landed](https://github.com/frankmcsherry/differential-dataflow/pull/18). This allows us to replace our `isize` "changes to counts" with more general Abelian groups (things that support addition, subtraction, have a zero, and don't much care which order you do the operations in). I initially called them "rings" because `join` requires multiplication, but that was wrong.
+About a month ago [support for general aggregatable types landed](https://github.com/frankmcsherry/differential-dataflow/pull/18). This allows us to replace our `isize` "changes to counts" with more general Abelian groups (things that support addition, subtraction, have a zero, and don't much care which order you do the operations in). I initially called them "rings" because `join` requires multiplication, but that was wrong.
 
 The more general aggregatable types allow us to bundle all of the data we want to aggregate together in one type, and then call the increasingly ill-named `count()` to promote the accumulated values as data. The actual Rust code looks like
 
@@ -110,11 +110,11 @@ collections
     .0
 ```
 
-There is some syntactic horror going on, and I apologize for this. Let me explain what is happening and why. 
+There is some syntactic horror going on, and I apologize for this. Let me explain what is happening and why.
 
 1. We access the `.inner` field of the stream of updates. We are diving down to timely dataflow here. The action we want to happen is a re-writing of the difference field of an update, and I haven't figured out what the right name for that is yet. The complementary operator is `count()`, whose name also sucks.
 2. Even if we had a good name, we kind of want to perform `flat_map` at the same time. Flat map is the operator that allows us to simultaneously filter and project data, and we want a very efficient "first touch" on the data: we want to throw away as much as possible, both in terms of whole records (filtering) and fields of those records (projection).
-3. For "reasons", we can't easily use tuples as our differences (reason: tuples do not derive `Add`, `Neg` traits). So, we wrap up the new differences in a stack of `DiffPair` types, which are just pairs of differences, nested. 
+3. For "reasons", we can't easily use tuples as our differences (reason: tuples do not derive `Add`, `Neg` traits). So, we wrap up the new differences in a stack of `DiffPair` types, which are just pairs of differences, nested.
 4. Timely's `flat_map` method requires iterators as output, where it could require `I: IntoIterator`, which would simplify things further.
 
 In a perfect (future) world we might write:
@@ -202,7 +202,7 @@ The first version of this code did several things differently, each of which had
 
 2. Timely dataflow's input operator [only recently](https://github.com/frankmcsherry/timely-dataflow/commit/f86573d264320324c3116cdb0640c79fa6b6a06f) got the ability to accept batches of input, rather than records at a time. I think that previously I was amazed that record-at-a-time ingestion got inlined and turned into a `memcpy`, but .. now we can just accept the batches.
 
-3. Our first verion of the code had a `filter` followed by a `map`. This meant that although we filtered fairly aggressively, we would still copy all the fields of the relatively large record. Fusing the two in `flat_map` prevents this. 
+3. Our first version of the code had a `filter` followed by a `map`. This meant that although we filtered fairly aggressively, we would still copy all the fields of the relatively large record. Fusing the two in `flat_map` prevents this.
 
 4. The `LineItem` type has a variable-length text field for "comments". I thought that a `String` would be a great way to represent this. It wasn't. Apparently it takes quite a while to de-allocate the memory for six million strings, which we spent about one second doing. This was replaced with an [`arrayvec::ArrayString`](https://github.com/bluss/arrayvec), which is a statically allocated inline hunk of memory with a fixed upper bound on length. The TPCH schema indicates an upper length of 44 bytes, and it is probably this generous thinking that is why your customer feedback form truncates to halfway through your first sentence.
 
@@ -519,12 +519,12 @@ It is pretty nice having a load of computations which exercise different aspects
 
 We may have produced approximations to the TPCH workload; I'm still not sure. If we have, then we have a suite of relatively decent numbers, showing that with multiple workers and logical batching you can accept one million updates per second for any of the queries. Running all of the queries concurrently would also be cool, but given that there is no sharing going on, it would probably drop down to one twenty-second of one million tuples per second.
 
---- 
+---
 
 If you are familiar with the [How to Win a Hot Dog Eating Contest](https://infoscience.epfl.ch/record/218203/files/sigmod2016-cr.pdf?version=1) paper, this post reaches some conclusions that are similar, some that are different. We see consistent high throughput across the queries, where they saw a mix of great and mediocre throughputs. With batching, many of their queries improve, but some still lag behind (e.g. their `q09`, `q15`, and `q16`). Scaling out to multiple workers always helps us, where it doesn't always help them.
 
 As a meta-conclusion, Naiad (and I guess implicitly differential dataflow) got dinged in their related work section thusly:
 
-> Naiad [27] and Trill [11] support flat LINQ-style continuous queries, while for complex queries with nested aggregates the user has to encode efficient execution plans. Spark Streaming [39] allows running simple SQL queries but only for windowed data. In contrast to these systems, our approach: 1) favors declaritivity as the user only needs to specify input SQL queries without execution plans; 2) can incrementally maintain queries with equality-correlated nested aggregates; 3) generates code tailored to the given workload; our compilation framework can target any scalable system with a synchronous execution model.
+> Naiad [27] and Trill [11] support flat LINQ-style continuous queries, while for complex queries with nested aggregates the user has to encode efficient execution plans. Spark Streaming [39] allows running simple SQL queries but only for windowed data. In contrast to these systems, our approach: 1) favors declarativity as the user only needs to specify input SQL queries without execution plans; 2) can incrementally maintain queries with equality-correlated nested aggregates; 3) generates code tailored to the given workload; our compilation framework can target any scalable system with a synchronous execution model.
 
 While it is easy to understand the advantage of declarativity, especially if it opens up the space to analysts who don't have a background in "programming", some of the numbers we saw could shine some light on current limitations of declarativity from the perspective of performance. In several cases, but most notably query 15, our ability to specify a semantically equivalent (I hope!) computation with an improved implementation led to multiple orders of magnitude performance improvements. I'm personally a fan of declarative programming idioms where you can drop in more instructive operations, down to the level of imperative programming if required. It's all in service of better performing systems, and you should use whatever works best; some times that is the clever database optimizer, and many times it just isn't.
